[package]
name = "fast-cli"
version = "0.1.1"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
regex = "1"
anyhow = "1"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
mimalloc = "0.1"